--- a/src/index.css
+++ b/src/index.css
@@ -12,10 +12,8 @@ code {
     monospace;
 }
 .Card {
-  /* height: 100%;
-  width: 100%; */
-  height: 180px;
-  width: 120px;
+  height: 100%;
+  width: 100%;
   border: 1px slategray;
   background-color: aqua;
   margin: 1px;
@@ -24,18 +22,50 @@ code {
   align-items: center;
 }
 .Container{
-  max-height: 60vh;
+  max-height: 90vh;
   width: 60vw;
+  border: 2px solid rebeccapurple;
+  
+  --gap: 10px;
+  --num-cols: 12;
+  --num-rows: 8;
+  --row-height: 200px;
   display: grid;
-  justify-content: center;
-  align-items: center;
-  border: 2px solid blue;
+  box-sizing: border-box;
+  padding: var(--gap);
+  grid-template-columns: repeat(var(--num-cols),1fr);
+  grid-auto-rows: var(--row-height);
+  /* grid-template-rows: repeat(var(--num-rows),180) ; */
+  gap:var(--gap);
   overflow-y: scroll;
-  grid-template-columns: repeat(7,minmax(120px,auto));
-  grid-template-rows: repeat(2,minmax(180px,1fr)) ;
-  row-gap: 1px;
-  column-gap: 1px;
+  justify-content: center;
 }
-/* ::-webkit-scrollbar {
+/*For Desktop*/
+@media screen and (min-width: 1024px) {
+  .Container {
+    --num-cols: 12;
+    --num-rows: 8;
+  }
+}
+ 
+/* For Tablet View */
+@media screen and (min-device-width: 768px)
+and (max-device-width: 1024px) {
+  .Container {
+    --num-cols: 8;
+    --num-rows: 4;
+  }
+}
+ 
+/* For Mobile Portrait View */
+@media screen and (max-device-width: 480px)
+and (orientation: portrait) {
+  .Container {
+    --num-cols: 7;
+    --num-rows: 3;
+  }
+}
+
+::-webkit-scrollbar {
   width: 0px; 
-}  */
+} 
